ingress-eks-standard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cal-app-ingress
  namespace: dev-namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:150965600049:certificate/57483fa6-cafa-445f-971f-86b2de206959
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-Res-2021-06
spec:
  rules:
  - host: calculator.devopscloudai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cal-service
            port:
              number: 8080
  - host: game.devopscloudai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048-service
            port:
              number: 80
